// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Field Test Test natural password field 1`] = `
<input
  name="password"
  onChange={[Function]}
  type="password"
  value=""
/>
`;

exports[`Password Field Test Test password field with onChange function 1`] = `
<input
  name="password"
  onChange={[Function]}
  type="password"
  value=""
/>
`;

exports[`Password Field Test Test password field with placeholder property 1`] = `
<input
  name="password"
  onChange={[Function]}
  placeholder="Type your password..."
  value=""
/>
`;
